# prediction_movies_imdb

./: .gitignore  README.md  main.py  prediction_movies_imdb.ipynb  prediction_movies_imdb_modificado.ipynb  pyproject.toml
