[project]
name = "ApMaqTP"
version = "0.1.0"
description = "Análisis de Rentabilidad Películas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.4.3,<1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "pathlib>=1.0.1",
    "lightgbm>=4.6.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
